Update test class for Java 10-13 ...
- samples only for standard features
- markdown javadoc for JEPs
- organize classes related to Java 10-13
- improve code readability